Small fix with overflow of the row given too many PDF document icons

--- a/src/pages/searchResults/SearchResults.css
+++ b/src/pages/searchResults/SearchResults.css
@@ -37,3 +37,9 @@
 .filterList{
     width: 50%;
 }
+
+.documents-wrapper {
+    display: flex; /* Use flexbox layout */
+  flex-wrap: wrap; /* Allow items to wrap to the next line */
+  gap: 10px; /* Optional: adds some space between the icons */
+  }
